<resources>
    <string name="app_name">Calculheure</string>

    <string name="main_result">Month Hour</string>
    <string name="main_button_month">Current Month</string>
    <string name="main_total_hour">Total Hour:</string>
    <string name="main_total_hour_holder" formatted="true">Total Hour: %s1</string>
    <string name="main_additional_hour">Additional Hour:</string>
    <string name="main_today">Fill Today</string>
    <string name="main_current_week">Current Week</string>

    <string name="modif_day">Day</string>
    <string name="modif_road">Road:</string>
    <string name="modif_load">Load:</string>
    <string name="modif_confirm">Confirm</string>
    <string name="modif_empty_Work">Please register a work of this day</string>

    <string name="month_result">Balance Sheet</string>
    <string name="month_total">Total Hour:</string>
    <string name="month_additional">Additional Hour:</string>
    <string name="month_button">Actual Week</string>

    <string name="month_cell_date">from 01 to 07</string>
    <string name="month_cell_total">Total Hour:</string>
    <string name="month_cell_additional">additional Hour:</string>

    <string name="week_total">Total</string>
    <string name="week_week">Week</string>
    <string name="week_left_arrow">previous button</string>
    <string name="week_right_arrow">next button</string>
    <string name="week_morning">Morning Hour:</string>
    <string name="week_road">Road Time:</string>
    <string name="week_break">Break Time:</string>
    <string name="week_total_time">Total Time:</string>
    <string name="week_afternoon">Afternoon Hour:</string>
    <string name="week_loading">Loading Time:</string>
    <string name="week_additional">Additional Hour:</string>
    <string name="week_recycler">list of days</string>
    <string name="week_worksite">0</string>

    <string name="week_status">Day OFF</string>
    <string name="week_fill">Fill</string>

    <string name="modif_cell_worksite">Worksite</string>
    <string name="modif_cell_city">City:</string>
    <string name="modif_cell_work">Work:</string>
    <string name="modif_cell_morning">AM:</string>
    <string name="modif_cell_afternoon">PM:</string>
    <string name="modif_cell_begin_hour">Begin hour:</string>
    <string name="modif_cell_end_hour">End Hour:</string>
    <string name="modif_cell_valid">add Worksite</string>
    <string name="modif_cell_erase">delete existing worksite</string>

    <string name="toolbar_home">Month</string>
    <string name="toolbar_back">Back</string>
    <string name="toolbar_today">add Today</string>

    <string name="general_hourUnit">h</string>
    <string name="general_zero">0</string>
    <string name="general_to">to</string>
</resources>