<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.WeekActivity">


    <TextView
        android:id="@+id/week_week"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/week_week"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        />

    <ImageButton
        android:id="@+id/week_left_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/week_left_arrow"
        android:src="@android:drawable/arrow_up_float"
        android:layout_alignTop="@id/week_week"
        android:layout_marginHorizontal="10dp"/>

    <ImageButton
        android:id="@+id/week_right_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/week_right_arrow"
        android:src="@android:drawable/arrow_down_float"
        android:layout_alignTop="@id/week_week"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="10dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/week_recycler"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_below="@id/week_week"
        />

    <TextView
        android:id="@+id/week_total"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="@string/week_total"
        android:layout_below="@id/week_recycler"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        />

    <TextView
        android:id="@+id/week_morning"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/week_morning"
        android:layout_below="@id/week_total"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        />

    <TextView
        android:id="@+id/week_road"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/week_road"
        android:layout_below="@id/week_morning"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        />

    <TextView
        android:id="@+id/week_break"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/week_break"
        android:layout_below="@id/week_road"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        />

    <TextView
        android:id="@+id/week_totalhour"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/week_total_time"
        android:layout_below="@id/week_break"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        />

    <TextView
        android:id="@+id/week_afternoon"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/week_afternoon"
        android:layout_below="@id/week_total"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        />

    <TextView
        android:id="@+id/week_loading"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/week_loading"
        android:layout_below="@id/week_afternoon"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        />

    <TextView
        android:id="@+id/week_additional"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/week_additional"
        android:layout_below="@id/week_loading"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        />

</RelativeLayout>