<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MonthActivity">

    <CalendarView
        android:id="@+id/month_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        />

    <TextView
        android:id="@+id/month_result"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/month_result"
        android:layout_below="@id/month_calendar"
        android:layout_marginHorizontal="20dp"
        />

    <TextView
        android:id="@+id/month_total"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/month_total"
        android:layout_below="@id/month_result"
        android:layout_margin="20dp"
        />

    <TextView
        android:id="@+id/month_additional_hour"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/month_additional"
        android:layout_below="@id/month_result"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        />

    <Button
        android:id="@+id/month_week_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="@string/month_button"
        />

</RelativeLayout>