<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ModifActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/modif_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <TextView
        android:id="@+id/modif_day"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/modif_day"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:layout_below="@id/modif_toolbar"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/modif_recycler"
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/modif_day"
        />

    <EditText
        android:id="@+id/modif_road"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:autofillHints="road"
        android:hint="@string/modif_road"
        android:layout_below="@id/modif_recycler"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/modif_load"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/modif_load"
        android:autofillHints="load"
        android:inputType="number"
        android:layout_below="@id/modif_recycler"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        />

    <Button
        android:id="@+id/modif_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/modif_confirm"
        />

</RelativeLayout>